fix: fix spacing styling

--- a/angular-frontend/src/styles.scss
+++ b/angular-frontend/src/styles.scss
@@ -80,3 +80,8 @@ a:hover {
   padding-left: 10rem;
   padding-right: 10rem;
 }
+
+.py-16 {
+  padding-bottom: 10rem;
+  padding-top: 10rem;
+}
